Created a README and Class Diagram

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>stm std kit</title>
     </head>
     <body>
-        <p>std kit</p>
+        <p>Welcome to the std kit</p>
     </body>
 </html>
