--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <title>stm std kit</title>
     </head>
     <body>
-        <p>Welcome to the std kit</p>
+        <h1>Welcome to the std kit</h1>
+        <br>
+        <p>here is a list of example implementations of the standard kit</p>
+        <ol>
+            <li>
+                <a href="./exemples/base-template/index.html">Base Template</a>
+            </li>
+            <li>
+                <a href="./exemples/spawn-planet/index.html">Spawn Planet</a>
+            </li>
+        </ol>
     </body>
 </html>
