--- a/exemples/spawn-planet/index.html
+++ b/exemples/spawn-planet/index.html
@@ -33,7 +33,7 @@
     <script type="importmap"> { "imports": { "three": "https://cdn.skypack.dev/three@0.137.0" } } </script>
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="module">
-        import { StdEnv } from 'https://spacetime-meta.github.io/spacetime-standard-kit/js/StdEnv.js';
+        import { StdEnv } from '../../js/StdEnv.js';
 
         let stats;
 
