Create new methods and addapt examples

--- a/exemples/spawn-planet/index.html
+++ b/exemples/spawn-planet/index.html
@@ -32,72 +32,6 @@
 
     <script type="importmap"> { "imports": { "three": "https://cdn.skypack.dev/three@0.137.0" } } </script>
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-    <script type="module">
-        import { StdEnv } from '../../js/StdEnv.js';
-
-        let stats;
-
-        let settings = ["Low", "Medium", "High", "Ultra"];
-
-        const blocker = document.getElementById('blocker');
-        const instructions = document.getElementById('instructions');
-        const flyout = document.getElementById('fly-out');
-        const graphics = document.getElementById("graphics");
-
-        const VE = new StdEnv();
-
-        init();
-
-        function init() {
-            // ===== Virtual Env =====
-            VE.init('glb/spawnplanet.glb', 'glb/vanguard.glb', 0, -20, 0);
-
-            // ===== controls =====
-            VE.controls.addEventListener('lock', function() {
-                flyout.innerHTML = 'ESC To Return'
-                instructions.style.display = 'none';
-                blocker.style.display = 'none';
-            });
-
-            VE.controls.addEventListener('unlock', function() {
-                flyout.innerHTML = 'Back To Map'
-                blocker.style.display = 'block';
-                instructions.style.display = '';
-            });
-
-            instructions.addEventListener('click', function() {
-                VE.controls.lock();
-            });
-
-            graphics.innerHTML = "Graphics: " + settings[VE.graphicTier];
-            graphics.addEventListener('click', function() {
-                VE.increaseGraphicSettings();
-                graphics.innerHTML = "Graphics: " + settings[VE.graphicTier];
-            });
-
-            // ===== stats =====
-            // stats = new Stats();
-            // stats.showPanel(0);
-            // document.body.appendChild(stats.dom);
-        }
-
-        if (!window.requestPostAnimationFrame) {
-            window.requestPostAnimationFrame = function(task) {
-                requestAnimationFrame(() => {
-                    setTimeout(task, 0);
-                });
-            }
-        }
-
-        function animate() {
-            requestPostAnimationFrame(animate);
-
-            VE.update();
-
-            // stats.update();
-        }
-        requestPostAnimationFrame(animate);
-    </script>
+    <script type="module" src="./js/main.js"></script>
 </body>
-
 </html>
