Create first draft of arbitrary loading logic

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <li>
                 <a href="./exemples/spawn-planet/index.html">Spawn Planet</a>
             </li>
+            <li>
+                <a href="./exemples/floor-is-lava/index.html">Floor is Lava</a>
+            </li>
         </ol>
     </body>
 </html>
