more cleanup and create terrain generation example

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li>
                 <a href="./exemples/floor-is-lava/index.html">Floor is Lava</a>
             </li>
+            <li>
+                <a href="./exemples/terrain-generation/index.html">Terrain Generation</a>
+            </li>
         </ol>
     </body>
 </html>
