New classroom example

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                 <a href="./exemples/base-template/index.html">Base Template</a>
             </li>
             <li>
+                <a href="./exemples/classroom/index.html">Classroom</a>
+            </li>
+            <li>
                 <a href="./exemples/spawn-planet/index.html">Spawn Planet</a>
             </li>
             <li>
