create basic video demo

--- a/exemples/classroom/index.html
+++ b/exemples/classroom/index.html
@@ -13,6 +13,10 @@
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="module" src="./js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.5-rc.1/peerjs.min.js"></script>
+
+    <video id="video" loop crossOrigin="anonymous" playsinline style="display:none">
+        <source src="textures/whitepaper.mp4" type='video/mp4'>
+    </video>
 </body>
 
 </html>
