create new example 'dome'

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="./exemples/classroom/authentication.html">Classroom</a></li>
             <li><a href="./exemples/base-template/index.html">Base Template</a></li>
             <li><a href="./exemples/spawn-planet/index.html">Spawn Planet</a></li>
+            <li><a href="./exemples/dome/index.html">Dome</a></li>
             <li><a href="./exemples/floor-is-lava/index.html">Floor is Lava</a></li>
             <li><a href="./exemples/terrain-generation/index.html">Terrain Generation</a></li>
         </ol>
