116-validate-wallet-for-user-demo-purpose-feedbacks
update based on some feedbacks from Jason
note: for skip this validation during testing, just click inside the logo

--- a/exemples/classroom/authentication.html
+++ b/exemples/classroom/authentication.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="card card-login mx-auto text-center bg-dark">
             <div class="mx-auto bg-dark">
-                <span> 
+                <span id="logo"> 
                     <img src="assets/logo.png" class="w-50" alt="Logo"> 
                 </span>
                 <br/>
@@ -24,11 +24,11 @@
                 </button>
             </div>
             <br/>
-            <div>
+            <!-- <div>
                 <button class="wrapper w-75" id="no-wallet">
                     Without Wallet
                 </button>
-            </div>
+            </div> -->
         </div>
         <script src="js/authentication.js"></script>
     </div>
