add stats and static map

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         <ol>
             <li><a href="./examples/classroom/authentication.html">Classroom</a></li>
             <li><a href="./examples/base-template/index.html">Base Template</a></li>
-            <li><a href="./examples/spawn-planet/index.html">Spawn Planet</a></li>
             <li><a href="./examples/dome/index.html">Dome</a></li>
             <li><a href="./examples/floor-is-lava/index.html">Floor is Lava</a></li>
-            <li><a href="./examples/terrain-generation/index.html">Terrain Generation</a></li>
+            <li>Meta</li>
+            <li><a href="./metaverse/planet/index.html">planets</a></li>
+            <li><a href="./metaverse/spawn-planet/index.html">Spawn Planet</a></li>
         </ol>
     </body>
 </html>
