--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="./examples/base-template/index.html">Base Template</a></li>
             <li><a href="./examples/dome/index.html">Dome</a></li>
             <li><a href="./examples/floor-is-lava/index.html">Floor is Lava</a></li>
+            <li><a href="./examples/event-planet/index.html">parkour</a></li>
             <li>Meta</li>
             <li><a href="./metaverse/planet/index.html">planets</a></li>
             <li><a href="./metaverse/spawn-planet/index.html">Spawn Planet</a></li>
