make examples and usecases single files

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
         <p>here is a list of example implementations of the standard kit</p>
         <h3>Examples</h3>
         <ol>
-            <li><a href="./examples/base-template/index.html">Base Template</a></li>
-            <li><a href="./examples/dome/index.html">Dome</a></li>
-            <li><a href="./examples/floor-is-lava/index.html">Floor is Lava</a></li>
+            <li><a href="./examples/base-template.html">Base Template</a></li>
+            <li><a href="./examples/dome.html">Dome</a></li>
+            <li><a href="./examples/floor-is-lava.html">Floor is Lava</a></li>
         </ol>
         <h3>Real usages</h3>
         <ol>
-            <li><a href="./metaverse/event-planet/index.html">parkour</a></li>
-            <li><a href="./metaverse/planet/index.html">planets</a></li>
-            <li><a href="./metaverse/spawn-planet/index.html">Spawn Planet</a></li>
+            <li><a href="./metaverse/default-planet.html">planets</a></li>
+            <li><a href="./metaverse/spawn-planet.html">Spawn Planet</a></li>
+        </ol>
+        <h3>Games</h3>
+        <ol>
+            <li><a href="./metaverse/parkour-planet/parkour_planet.html">parkour planet</a></li>
+            <li><a href="./metaverse/parkour-planet/parkourLv1.html">parkour</a></li>
+
         </ol>
     </body>
 </html>
