--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <p>here is a list of example implementations of the standard kit</p>
         <h3>Examples</h3>
         <ol>
-            <li><a href="./examples/base-template.html">Base Template</a></li>
-            <li><a href="./examples/dome.html">Dome</a></li>
-            <li><a href="./examples/floor-is-lava.html">Floor is Lava</a></li>
+            <li><a href="./examples/base-template.html">Base Template (Default Settings Demo)</a></li>
+            <li><a href="./examples/dome.html">Dome (FBX Loader Demo)</a></li>
+            <li><a href="./examples/floor-is-lava.html">Floor is Lava (Add Solid Objects)</a></li>
+            <li><a href="./examples/interactiveObjects.html">Tower Parkour (Interactive Objects Demo)</a></li>
         </ol>
         <h3>Real usages</h3>
         <ol>
@@ -20,9 +21,7 @@
         </ol>
         <h3>Games</h3>
         <ol>
-            <li><a href="./metaverse/parkour-planet/parkour_planet.html">parkour planet</a></li>
-            <li><a href="./metaverse/parkour-planet/parkourLv1.html">parkour</a></li>
-
+            <li><a href="./metaverse/parkour-planet/parkourLv1.html">parkour 1</a></li>
         </ol>
     </body>
 </html>
