extract non sdk stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>stm std kit</title>
     </head>
     <body>
-        <h1>Welcome to the std kit</h1>
+        <h1>Welcome to the spacetime std</h1>
         <br>
         <p>here is a list of example implementations of the standard kit</p>
         <h3>Examples</h3>
