--- a/index.html
+++ b/index.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>stm std kit</title>
+        <title>Spacetime SDK</title>
     </head>
     <body>
-        <h1>Welcome to the spacetime std</h1>
+        <h1>Welcome to the spacetime sdk</h1>
         <br>
-        <p>here is a list of example implementations of the standard kit</p>
+        
         <h3>Examples</h3>
         <ol>
-            <li><a href="./examples/base-template.html">Base Template (Default Settings Demo)</a></li>
+            <li><a href="./examples/baseTemplate.html">Base Template (Default Settings Demo)</a></li>
             <li><a href="./examples/dome.html">Dome (FBX Loader Demo)</a></li>
             <li><a href="./examples/floor-is-lava.html">Floor is Lava (Add Solid Objects)</a></li>
             <li><a href="./examples/interactiveObjects.html">Tower Parkour (Interactive Objects Demo)</a></li>
-        </ol>
-        <h3>Real usages</h3>
-        <ol>
-            <li><a href="./metaverse/default-planet.html">planets</a></li>
-            <li><a href="./metaverse/spawn-planet.html">Spawn Planet</a></li>
-        </ol>
-        <h3>Games</h3>
-        <ol>
-            <li><a href="./metaverse/parkour-planet/parkourLv1.html">parkour 1</a></li>
         </ol>
     </body>
 </html>
