--- a/examples/baseTemplate.html
+++ b/examples/baseTemplate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <title>Base Template</title>
@@ -11,16 +11,18 @@
     <body>
         <script src="../build/bundle.min.js"></script>
         <script type="module">
-            const VE = new VirtualEnvironment();
+
+            // start by initializing a virtual environment
+            const virtualEnvironment = new VirtualEnvironment();
 
             // build the environment
-            VE.loadTerrain('./assets/terrains/baseTemplate.glb', 0, 0, 0, "glb");
-            VE.spawnPlayer({spawn: {x: 0, y: 10, z: 0}});
+            virtualEnvironment.loadTerrain('./assets/terrains/baseTemplate.glb', 0, 0, 0, "glb");
+            virtualEnvironment.spawnPlayer({spawn: {x: 0, y: 10, z: 0}});
 
             // start the animation loop
             animate();
             function animate() {
-                VE.update();
+                virtualEnvironment.update();
                 requestAnimationFrame(animate);
             }
         </script>
