--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="./examples/dome.html">Dome (FBX Loader Demo)</a></li>
             <li><a href="./examples/floor-is-lava.html">Floor is Lava (Add Solid Objects)</a></li>
             <li><a href="./examples/interactiveObjects.html">Tower Parkour (Interactive Objects Demo)</a></li>
+            <li><a href="./examples/terrainGeneration.html">Seed 100 (Terrain Generation)</a></li>
         </ol>
     </body>
 </html>
