--- a/examples/terrainGeneration.html
+++ b/examples/terrainGeneration.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <script src="../build/bundle.min.js"></script>
+        <script src="http://localhost:8080/bundle.min.js"></script>
         <script type="module">
 
             // start by initializing a virtual environment
