--- a/examples/index.html
+++ b/examples/index.html
@@ -14,6 +14,7 @@
             <li><a href="./floor-is-lava.html">Floor is Lava (Add Solid Objects)</a></li>
             <li><a href="./interactiveObjects.html">Tower Parkour (Interactive Objects Demo)</a></li>
             <li><a href="./terrainGeneration.html">Seed 100 (Terrain Generation)</a></li>
+            <li><a href="./portalDemo.html">Portal Demo</a></li>
         </ol>
     </body>
 </html>
