--- a/examples/baseTemplate.html
+++ b/examples/baseTemplate.html
@@ -16,10 +16,8 @@
             const virtualEnvironment = new VirtualEnvironment();
 
             // build the environment
-            virtualEnvironment.loadTerrain('./assets/terrains/baseTemplate.glb', 0, 0, 0, "glb");
-            virtualEnvironment.spawnPlayer({spawn: {x: 0, y: 10, z: 0}});
-
-            console.log(virtualEnvironment);
+            virtualEnvironment.loadTerrain({url: './assets/terrains/baseTemplate.glb'});
+            virtualEnvironment.spawnPlayer();
 
             // start the animation loop
             animate();
