--- a/examples/terrainGeneration.html
+++ b/examples/terrainGeneration.html
@@ -13,11 +13,11 @@
         <script type="module">
 
             // start by initializing a virtual environment
-            const virtualEnvironment = new VirtualEnvironment();
+            const virtualEnvironment = new VirtualEnvironment("./configs/emptyJson.json");
 
             // build the environment
-            virtualEnvironment.generateTerrain(100);
-            virtualEnvironment.spawnPlayer({spawn: {x: 0, y: 300, z: 0}});
+            virtualEnvironment.terrainController.generateTerrain(100);
+            virtualEnvironment.LOCAL_PLAYER.position.y = 200;
 
             // start the animation loop
             animate();
