Smooth camera logic

--- a/examples/terrainGeneration.html
+++ b/examples/terrainGeneration.html
@@ -13,7 +13,7 @@
         <script type="module">
 
             // start by initializing a virtual environment
-            const virtualEnvironment = new VirtualEnvironment("./configs/emptyJson.json");
+            const virtualEnvironment = new VirtualEnvironment();
 
             // build the environment
             virtualEnvironment.terrainController.generateTerrain(100);
