can now easily change the default avatars

--- a/examples/index.html
+++ b/examples/index.html
@@ -13,7 +13,7 @@
         <script type="module">          
             
             // simply call the virtual env with your config 
-            const virtualEnvironment = new VirtualEnvironment("./configs/devPlanet.json");
+            const virtualEnvironment = new VirtualEnvironment("./configs/baseTemplate.json");
 
             // start the animation loop
             animate();
