--- a/server/client/index.html
+++ b/server/client/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>STADA</title>
+        <title>Spacetime Meta</title>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
